[package]
name = "stuff"
version = "0.1.0"
edition = "2024"
description = "A tiny JSON-file document database with a Rust API and CLI."
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
